yxkh_k8s.yaml
#############################
# 一线考核用户程序
#############################
apiVersion: v1
kind: Service
metadata:
  name: fznewsyxkh
spec:
  selector:
    app: fznewsyxkh
  ports:
  - port: 8080
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fznewsyxkh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fznewsyxkh
  template:
    metadata:
      labels:
        app: fznewsyxkh
    spec:
      containers:
      - name: fznewsyxkh
        imagePullPolicy: Always
        image: registry.cn-hangzhou.aliyuncs.com/mumushuiding/fznewsyxkh
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fznewsyxkh
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fznewsyxkh
spec:
  hosts:
  - "*"
  gateways:
  - fznewsyxkh
  http:
  - match:
    - uri: 
        prefix: /api/v1/yxkh
    - uri: 
        prefix: /yxkh
    route:
    - destination:
        host: fznewsyxkh
        port:
          number: 8080
